# soral

./: .clangd  compile_commands.json  meson.build
.cache/clangd/index/: main.c.BD0CB2EEDDB88D3A.idx  screen.c.BB144B473A0CF666.idx  ui.c.B915F3C35D14DC0E.idx  ui.h.465F0E2C71C3349F.idx  util.c.74529BB4F1BC36C9.idx
include/: ui.h
src/: main.c
src/ui/: screen.c  ui.c  util.c
